--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,11 @@
         tools:layout_editor_absoluteX="8dp"
         android:orientation="vertical"
         android:weightSum="8">
+        <TextView
+            android:id="@+id/name_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
